Modifiy Changes on delete and search options

--- a/CarApplication/CarApplication.csproj
+++ b/CarApplication/CarApplication.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Hubs\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
