--- a/CarApplication/bin/CarApplication.dll.config
+++ b/CarApplication/bin/CarApplication.dll.config
@@ -8,11 +8,15 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="CarModelContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=CarAppDB;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\CarAppDB.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AutomaticAppStartup" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
@@ -43,6 +47,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!--<contexts>
+      <context type="CarApplication.DAL.CarModelContext, CarApplication">
+        <databaseInitializer type="CarApplication.DAL.CarModelContext, CarApplication" />
+      </context>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
